--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
             </div>
         </div>
     </section>
+    <section id = "Contact"
     <script src="script.js">
     </script>
 </body>
