--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
             </div>
         </div>
     </section>
-    <section id = "Contact"
+    <section id = "Contact">
+    </section>
     <script src="script.js">
     </script>
 </body>
