--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="details-container">
                 <img src="./images/experience.png" alt="Experience icon" 
                 class="icon"/>
-                <h3> Experience</h3>
+                <h3> SKILLS</h3>
                 <p><b>Fresher</b><br>Frontend Development</p>
         </div>
             <div class="details-container">
@@ -250,6 +250,42 @@
         </div>
     </section>
     <section id = "Contact">
+        <section id="contact">
+            <p class="section_text_p1">get in touch</p>
+            <h1 class="title">contact me</h1>
+            <div class="contact-info-upper-container">
+                <div class="contact-info-container">
+                    <img
+                    src="./assets/email.png"
+                    alt="email icon"
+                    class="icon contact-icon"/>
+                    <p><a href="mailto:yeswanth6463@gmail.com">yeswanth6463@gmail.com</a></p>
+    
+                </div>
+                <div class="contact-info-container">
+                    <img
+                    src="./assets/linkedin.png"
+                    alt="linked  icon"
+                    class="icon contact-icon"/>
+                    <p><a href="https://www.linkedin.com/in/yeswanth-m-505104260/">Linkedin</a></p>
+                    
+                </div>
+            </div>
+        </section>
+        <footer>
+            <nav>
+                <div class="nav-links-container">
+                    <ul class="nav-links">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Skills</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <p>copyright &#169; 2024 yeswanth.all rights reserved</p>
+        </footer>
+    <script src = "script.js" color ="black"></script>
     </section>
     <script src="script.js">
     </script>
