--- a/newindex.html
+++ b/newindex.html
@@ -256,3 +256,13 @@
     <p>copyright &#169; 2024 yeswanth.all rights reserved</p>
 </footer>
 <script src = "script.js" color ="black"></script>
+
+
+
+
+img{
+    justify-content: center;
+    align-items: center;
+    width: 68vh;
+    height: 75vh;
+}
