--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
     <section id="profile">
         <div class="section_pic-container">
-           <img src="./images/ashwb.jpg" width="300" height="150" alt="Ashwin kumar profile picture"/>  
+           <img src="./images/ashwb.jpg" height="450" width="450" alt="Ashwin kumar profile picture"/>  
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello,Im</p>
@@ -196,7 +196,8 @@
     <section id="Projects">
         <p class="section__text__p1">Browse My projects</p>
         <h1 class="title">Projects</h1>
-        <div class="experience-details-container">
+        <div class="experience-details-contaianer">
+            <div class="about-containers">
             <div class="details-container color-container">
                 <div class="article-container">
                 <img src="./images/alzheimer.jpeg" alt="Project-1" 
@@ -248,6 +249,9 @@
             </button>
             </div>
         </div>
+    </div>
+    <img src="./images/downarrow.png" alt="arrow icon" 
+    class="icon arrow" onclick="location.href='./#contact'"/>
     </section>
     <section id = "Contact">
         <section id="contact">
@@ -256,18 +260,18 @@
             <div class="contact-info-upper-container">
                 <div class="contact-info-container">
                     <img
-                    src="./assets/email.png"
+                    src="./images/email.png"
                     alt="email icon"
                     class="icon contact-icon"/>
-                    <p><a href="mailto:yeswanth6463@gmail.com">yeswanth6463@gmail.com</a></p>
+                    <p><a href="kkumar.ashwinn@gmail.com">kkumar.ashwinn@gmail.com</a></p>
     
                 </div>
                 <div class="contact-info-container">
                     <img
-                    src="./assets/linkedin.png"
+                    src="./images/linkedin1.jpeg"
                     alt="linked  icon"
                     class="icon contact-icon"/>
-                    <p><a href="https://www.linkedin.com/in/yeswanth-m-505104260/">Linkedin</a></p>
+                    <p><a href="https://www.linkedin.com/in/ashwinkumarm7123">Linkedin</a></p>
                     
                 </div>
             </div>
@@ -283,7 +287,7 @@
                     </ul>
                 </div>
             </nav>
-            <p>copyright &#169; 2024 yeswanth.all rights reserved</p>
+            <p>copyright &#169; 2024 Ashwin.all rights reserved</p>
         </footer>
     <script src = "script.js" color ="black"></script>
     </section>
