--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
     <section id="profile">
         <div class="section_pic-container">
-           <img src="./images/ashwb.jpg" height="450" width="450" alt="Ashwin kumar profile picture"/>  
+           <img src="./images/ashwb.jpg" height="300" width="400" alt="Ashwin kumar profile picture"/>  
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello,Im</p>
@@ -58,7 +58,7 @@
                         class="icon" onclick="location.href='https://github.com/ashwin7459'">
                     </div>
                 </div>
-            
+            </div>
         
     </section>
     <section id="about">
@@ -66,7 +66,7 @@
         <h1 class="title">About ME </h1>
         <div class="section-container">
             <div class="section_pic-container">
-            <img src="./images/ashwrb.jpg" alt="profile picture" 
+            <img src="./images/ashwrb.jpg" width="350" height="350" alt="profile picture" 
             class="about-pic"/>
         </div>
         <div class="about-details-container">
